--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,5 +20,11 @@
     <% end %>
 
     <%= yield %>
+
+    <p>
+    <% if session[:source] %>
+      Thanks for visiting me from <%= session[:source] %>
+    <% end %>
+    </p>
   </body>
 </html>
