--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -157,7 +157,7 @@ body {
   .masthead,
   .mastfoot,
   .cover-container {
-    width: 55rem;
+    width: 65rem;
   }
 }
 
@@ -208,10 +208,18 @@ body {
   color: white;
 }
 
+.tech-news {
+  color: black;
+  margin: 20px;
+}
 
+.tech-news > .card {
+  padding: 30px;
+}
 
-
-
+.tech-news a {
+  color: green;
+}
 
 
 
