Implemented style changes

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -221,8 +221,19 @@ body {
   color: green;
 }
 
+.app-card-container {
+  color: black;
+  text-align: left;
+}
 
+.app-card-container > .card {
+  padding: 40px;
+}
 
+.profile-img {
+  border: 1px solid grey;
+}
 
-
-
+.app-card-container a {
+  color: blue;
+}
