--- a/app/views/shared/_blog_sidebar.html.erb
+++ b/app/views/shared/_blog_sidebar.html.erb
@@ -2,7 +2,7 @@
   <div class="sidebar-module sidebar-module-inset">
     <h4>About Me</h4>
     <p>
-      Teaching is both my passion and my best ally for mastery.
+      Just a regular CS student with big dreams.
     </p>
   </div>
 
@@ -18,7 +18,7 @@
   <div class="sidebar-module">
     <h4>Elsewhere</h4>
     <ol class="list-unstyled social-links">
-      <li><a href="https://github.com/jordanhudgens"><%= fa_icon "github" %></a></li>
+      <li><a href="https://github.com/trannon1"><%= fa_icon "github" %></a></li>
       <li><a href="https://www.instagram.com/jordanhudgens/"><%= fa_icon "instagram" %></a></li>
       <li><a href="https://twitter.com/jordanhudgens"><%= fa_icon "twitter" %></a></li>
     </ol>
