--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -8,19 +8,19 @@
       <div class="col-md-6">
         <h3>Office Address</h3>
 
-        <p>7150 E Camelback Rd, Suite 444, Scottsdale, AZ 85251</p>
+        <p>13553 16th Ave NE, Seattle, WA 98125</p>
 
         <h3>Phone</h3>
 
-        <p><%= number_to_phone "4322386131" %></p>
+        <p><%= number_to_phone "(1)614-886-5580" %></p>
 
         <h3>Email</h3>
 
-        <p><a href="mailto:jordan@devcamp.com?subject=PortfolioContact" "email me">Email me</a> </p>
+        <p><a href="mailto:tran_b1@denison.edu?subject=PortfolioContact" "email me">Email me</a> </p>
       </div>
 
       <div class="col-md-6">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3326.944949124724!2d-111.92897748422938!3d33.502809380759025!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872b0bbd35df8635%3A0xf873d55c2d4dc69a!2s7150+E+Camelback+Rd+%23444%2C+Scottsdale%2C+AZ+85251!5e0!3m2!1sen!2sus!4v1484796936675" width="450" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+      <div class="mapouter"><div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=16th%20Ave%20NE%2C%20Seattle%2C%20WA%2C%2098125&t=k&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.embedgooglemap.net">embedgooglemap.net</a></div><style>.mapouter{text-align:right;height:500px;width:600px;}.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style></div>
       </div>
     </div>
   </div>
