--- a/app/views/shared/_blog_nav.html.erb
+++ b/app/views/shared/_blog_nav.html.erb
@@ -1,11 +1,8 @@
-<nav class="navbar navbar-toggleable-md navbar-light bg-faded blog-nav">
-  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
+<nav class="navbar navbar-dark bg-primary">
   <div class="container">
     <%= link_to "Bryan Tran", root_path, class: 'navbar-brand' %>
-
+    <%= nav_helper 'nav-link', 'span' %>
+    <%= login_helper 'nav-link' %>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <%= nav_helper 'nav-link', 'li' %>  
