--- a/app/views/shared/_blog_sidebar.html.erb
+++ b/app/views/shared/_blog_sidebar.html.erb
@@ -19,8 +19,10 @@
     <h4>Elsewhere</h4>
     <ol class="list-unstyled social-links">
       <li><a href="https://github.com/trannon1"><%= fa_icon "github" %></a></li>
+      <!--
       <li><a href="https://www.instagram.com/jordanhudgens/"><%= fa_icon "instagram" %></a></li>
-      <li><a href="https://twitter.com/jordanhudgens"><%= fa_icon "twitter" %></a></li>
+      -->
+      <li><a href="https://twitter.com/tran_b1"><%= fa_icon "twitter" %></a></li>
     </ol>
   </div>
 </div>
