--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -13,8 +13,10 @@
 }
 
 body {
+  background-color: #315481;
+  background-image: linear-gradient(to bottom, #315481, #918e82 100%);
+  background-attachment: fixed;
   font-family: 'Lato', sans-serif;
-  color: #555;
 }
 
 h1, .h1,
