--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -20,7 +20,7 @@
       </div>
 
       <div class="col-md-6">
-      <div class="mapouter"><div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=16th%20Ave%20NE%2C%20Seattle%2C%20WA%2C%2098125&t=k&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.embedgooglemap.net">embedgooglemap.net</a></div><style>.mapouter{text-align:right;height:500px;width:600px;}.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style></div>
+      <div class="mapouter"><div class="gmap_canvas"><iframe width="500" height="400" id="gmap_canvas" src="https://maps.google.com/maps?q=16th%20Ave%20NE%2C%20Seattle%2C%20WA%2C%2098125&t=k&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe></div><style>.mapouter{text-align:right;height:500px;width:400px;}.gmap_canvas {overflow:hidden;background:none!important;height:600px;width:400px;}</style></div>
       </div>
     </div>
   </div>
