--- a/app/views/shared/_blog_masthead.html.erb
+++ b/app/views/shared/_blog_masthead.html.erb
@@ -3,11 +3,9 @@
     <h1 class="blog-title">Dev Thoughts</h1>
     <p class="lead blog-description">Musings from my development journey.</p>
     <span>
-      <%= link_to 'Write a New Blog', new_blog_path if logged_in?(:site_admin) %>
-      <%= link_to 'Add new topic', new_topic_path if logged_in?(:site_admin) %>
-    </span>
-    <span>
-      <%= link_to "Topics", topics_path %>
+      <%= link_to 'Write a New Blog', new_blog_path , class: "btn btn-primary" if logged_in?(:site_admin)%>
+      <%= link_to 'Add new topic', new_topic_path , class: "btn btn-secondary" if logged_in?(:site_admin)%>
+      <%= link_to "Topics", topics_path, class: "btn btn-light" %>
     </span>
   </div>
 </div>
