--- a/app/assets/stylesheets/portfolios.scss
+++ b/app/assets/stylesheets/portfolios.scss
@@ -13,31 +13,15 @@
 }
 
 body {
+  background-color: #558131;
+  background-image: linear-gradient(to bottom, #315481, #532e82 100%);
+  background-attachment: fixed;
   min-height: 75rem; /* Can be removed; just added for demo purposes */
   font-family: 'Lato', sans-serif;
 }
 
 .navbar {
   margin-bottom: 0;
-}
-
-.jumbotron {
-  padding-top: 6rem;
-  padding-bottom: 6rem;
-  margin-bottom: 0;
-  background-color: #fff;
-}
-
-.jumbotron p:last-child {
-  margin-bottom: 0;
-}
-
-.jumbotron-heading {
-  font-weight: 300;
-}
-
-.jumbotron .container {
-  max-width: 40rem;
 }
 
 .album {
