--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <%= render "shared/application_nav" %>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -18,8 +19,6 @@
   </head>
 
   <body>
-
-    <%= render 'shared/blog_nav' %>
     <%= render 'shared/blog_masthead' %>
 
     <div class="container">
