--- a/app/views/shared/_application_nav.html.erb
+++ b/app/views/shared/_application_nav.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-dark bg-primary">
+<nav class="navbar navbar-dark bg-secondary">
   <%= nav_helper 'nav-link', 'span' %>
   <%= login_helper 'nav-link' %>
 </nav>
